--- a/.github/workflows/multi-platform-build.yml
+++ b/.github/workflows/multi-platform-build.yml
@@ -52,6 +52,7 @@ jobs:
         with:
           name: windows-build
           path: build\windows\x64\runner\Release\${{ env.name }}.exe
+          retention-days: 3
 
   # macOS 构建任务
   build-macos:
@@ -96,6 +97,7 @@ jobs:
         with:
           name: macos-build
           path: build/macos/dmg/${{ env.name }}.dmg
+          retention-days: 3
 
     # iOS 构建任务
   build-ios:
@@ -134,8 +136,7 @@ jobs:
         run: |
             xcodebuild -exportArchive -archivePath build/ios/archive/Runner.xcarchive \
             -exportPath build/ios/ipa \
-            -exportOptionsPlist ExportOptions.plist \
-            CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO -jobs 1 -verbose
+            -exportOptionsPlist ExportOptions.plist
 
       - name: Rename IPA
         run: |
@@ -147,6 +148,7 @@ jobs:
         with:
             name: ios-build
             path: build/ios/ipa/${{ env.name }}.ipa
+            retention-days: 3
 
     # Android 构建任务
   build-android:
@@ -184,6 +186,7 @@ jobs:
         with:
           name: android-build
           path: build/app/outputs/flutter-apk/${{ env.name }}.apk
+          retention-days: 3
     
   # Linux 构建任务：只编译 Linux 应用
   build-linux:
@@ -219,3 +222,4 @@ jobs:
         with:
           name: linux-build
           path: build/linux/x64/release/bundle/${{ env.name }}
+          retention-days: 3
