--- a/.github/workflows/multi-platform-build.yml
+++ b/.github/workflows/multi-platform-build.yml
@@ -28,7 +28,7 @@ jobs:
 
       # 安装 yq
       - name: Install yq
-        run: choco install yq
+        run: choco install yq --source="https://github.com/mikefarah/yq/releases/download/v4.40.2/yq_windows_amd64.zip"
 
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
