--- a/.github/workflows/multi-platform-build.yml
+++ b/.github/workflows/multi-platform-build.yml
@@ -26,19 +26,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 安装 curl
-      - name: Install curl
-        run: choco install curl -y
+      # 安装 yq
+    #   - name: Install yq
+    #     run: choco install yq
 
-      # 使用 curl 下载 yq
-      - name: Download yq using curl
-        run: curl -Lo yq.exe https://github.com/mikefarah/yq/releases/download/v4.40.2/yq_windows_amd64.exe
+      # 使用 PowerShell 下载 yq
+      - name: Download yq using PowerShell
+        run: Invoke-WebRequest -Uri "https://github.com/mikefarah/yq/releases/download/v4.40.2/yq_windows_amd64.exe" -OutFile "yq.exe"
 
       # 将 yq 添加到路径中
-      - name: Add yq to PATH
+      - name: Move yq.exe to custom directory
         run: |
-          move yq.exe C:\Windows\System32
-          echo "::add-path::C:\Windows\System32"
+          mkdir -p C:\tools
+          move yq.exe C:\tools\yq.exe
+          echo "C:\tools" >> $env:GITHUB_PATH
 
       # 验证 yq 安装
       - name: Verify yq installation
