--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,14 +24,23 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Generate Release Notes
+        run: |
+            echo "## Release Notes" > CHANGE.md
+            echo "" >> CHANGE.md
+            echo "### Changes in this release:" >> CHANGE.md
+            git log -1 --pretty=format:"* %s" >> CHANGE.md
+            echo "" >> CHANGE.md
+            echo "Generated on $(date)" >> CHANGE.md
+
       - name: Create and Upload Release
         uses: ncipollo/release-action@v1
         with:
           tag: ${{ github.ref_name }}
           name: Release ${{ github.ref_name }}
-          body: |
-            ## Release Notes
-            - Automatically created release for ${{ github.ref_name }}
+          bodyFile: CHANGE.md
+          allowUpdates: true
+          replacesArtifacts: false
           token: ${{ secrets.GITHUB_TOKEN }}
           artifacts: |
             ./artifacts/windows/${{ env.name }}.exe
@@ -46,6 +55,5 @@ jobs:
             application/vnd.android.package-archive
             application/octet-stream
           updateOnlyUnreleased: true
-          replacesArtifacts: true
           skipIfReleaseExists: false
           makeLatest: true
