--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,11 +24,33 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Download Artifacts
+      # 下载 Windows 构建产物
+      - name: Download Windows Artifacts
         uses: actions/download-artifact@v4
         with:
-          name: build-artifacts
-          path: ./artifacts
+          name: windows-build
+          path: ./artifacts/windows
+
+      # 下载 macOS 构建产物
+      - name: Download macOS Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: macos-build
+          path: ./artifacts/macos
+
+      # 下载 Android 构建产物
+      - name: Download Android Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: android-build
+          path: ./artifacts/android
+
+      # 下载 Linux 构建产物
+      - name: Download Linux Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: linux-build
+          path: ./artifacts/linux
 
       - name: List artifacts
         run: |
@@ -54,10 +76,10 @@ jobs:
           replacesArtifacts: false
           token: ${{ secrets.GITHUB_TOKEN }}
           artifacts: |
-            ./artifacts/${{ env.name }}.exe
-            ./artifacts/${{ env.name }}.dmg
-            ./artifacts/${{ env.name }}.apk
-            ./artifacts/${{ env.name }}
+            ./artifacts/windows/${{ env.name }}.exe
+            ./artifacts/macos/${{ env.name }}.dmg
+            ./artifacts/android/${{ env.name }}.apk
+            ./artifacts/linux/${{ env.name }}
           artifactContentType: |
             application/octet-stream
             application/x-apple-diskimage
