--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,7 @@ jobs:
           path: ./artifacts/windows
           run-id: ${{ github.event.workflow_run.id }}
           repository: ${{ github.repository }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       # 下载 macOS 构建产物
       - name: Download macOS Artifacts
@@ -41,6 +42,7 @@ jobs:
           path: ./artifacts/macos
           run-id: ${{ github.event.workflow_run.id }}
           repository: ${{ github.repository }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       # 下载 Android 构建产物
       - name: Download Android Artifacts
@@ -50,6 +52,7 @@ jobs:
           path: ./artifacts/android
           run-id: ${{ github.event.workflow_run.id }}
           repository: ${{ github.repository }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       # 下载 Linux 构建产物
       - name: Download Linux Artifacts
@@ -59,6 +62,7 @@ jobs:
           path: ./artifacts/linux
           run-id: ${{ github.event.workflow_run.id }}
           repository: ${{ github.repository }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: List artifacts
         run: |
