--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,10 +34,6 @@ jobs:
           repository: ${{ github.repository }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
-      # 解压 Windows 构建产物
-      - name: Unzip Windows Build
-        run: unzip -o ./artifacts/windows/windows-build.zip -d ./artifacts/windows/
-
       # 下载 macOS 构建产物
       - name: Download macOS Artifacts
         uses: actions/download-artifact@v4
@@ -47,10 +43,6 @@ jobs:
           run-id: ${{ github.event.workflow_run.id }}
           repository: ${{ github.repository }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
-
-      # 解压 macOS 构建产物
-      - name: Unzip macOS Build
-        run: unzip -o ./artifacts/macos/macos-build.zip -d ./artifacts/macos/
 
       # 下载 Android 构建产物
       - name: Download Android Artifacts
@@ -62,10 +54,6 @@ jobs:
           repository: ${{ github.repository }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
-      # 解压 Android 构建产物
-      - name: Unzip Android Build
-        run: unzip -o ./artifacts/android/android-build.zip -d ./artifacts/android/
-
       # 下载 Linux 构建产物
       - name: Download Linux Artifacts
         uses: actions/download-artifact@v4
@@ -75,6 +63,23 @@ jobs:
           run-id: ${{ github.event.workflow_run.id }}
           repository: ${{ github.repository }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: List artifacts
+        run: |
+          ls -R ./artifacts
+
+      # 解压 Windows 构建产物
+      - name: Unzip Windows Build
+        run: unzip -o ./artifacts/windows/windows-build.zip -d ./artifacts/windows/
+  
+      # 解压 macOS 构建产物
+      - name: Unzip macOS Build
+        run: unzip -o ./artifacts/macos/macos-build.zip -d ./artifacts/macos/
+  
+
+      # 解压 Android 构建产物
+      - name: Unzip Android Build
+        run: unzip -o ./artifacts/android/android-build.zip -d ./artifacts/android/
 
       # 解压 Linux 构建产物
       - name: Unzip Linux Build
