--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -23,25 +23,25 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-latest]
+        os: [macos-11]
         platform: [ios]
         include:
-          - os: macos-latest
+          - os: macos-11
             platform: ios
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Xcode
-        if: matrix.platform == 'ios'
-        run: sudo xcode-select --switch /Applications/Xcode.app/Contents/Developer
-
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
           channel: stable
           flutter-version-file: pubspec.yaml
+
+      - name: Setup Xcode
+        if: matrix.platform == 'ios'
+        run: sudo xcode-select --switch /Applications/Xcode.app/Contents/Developer
 
       - name: Install dependencies
         run: flutter pub get
@@ -53,27 +53,39 @@ jobs:
       - name: Archive and Export IPA
         if: matrix.platform == 'ios'
         run: |
-          mkdir -p builds/ipa
+          mkdir -p build/ipa
 
-          xcodebuild -quiet archive -workspace ios/Runner.xcworkspace -scheme Runner archive \
+          xcodebuild \
+          -quiet archive \
+          -workspace ios/Runner.xcworkspace -scheme Runner archive \
           -configuration Release -sdk iphoneos \
           -archivePath build/ios/archive/Runner.xcarchive \
-          CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO -jobs 1
+          CODE_SIGN_IDENTITY="" \
+          CODE_SIGNING_REQUIRED=NO \
+          CODE_SIGNING_ALLOWED=NO \
+          -jobs 1
 
-      - name: Export IPA
-        run: |
-          xcodebuild -exportArchive -archivePath build/ios/archive/Runner.xcarchive \
-          -exportPath build/ios/ipa \
-          -exportOptionsPlist ExportOptions.plist \
-          -allowProvisioningUpdates \
-          CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO -jobs 1 -verbose
+    #   - name: Export IPA
+    #     if: matrix.platform == 'ios'
+    #     run: |
+    #       xcodebuild -exportArchive \
+    #       -archivePath build/ios/archive/Runner.xcarchive \
+    #       -exportPath build/ios/ipa \
+    #       -exportOptionsPlist ExportOptions.plist \
+    #       CODE_SIGN_IDENTITY="" \
+    #       CODE_SIGNING_REQUIRED=NO \
+    #       CODE_SIGNING_ALLOWED=NO \
+    #       -jobs 1 \
+    #       -verbose
 
-      - name: Rename IPA
-        run: mv build/ios/ipa/Runner.ipa build/ios/ipa/${{ env.name }}.ipa
+    #   - name: Rename IPA
+    #     if: matrix.platform == 'ios'
+    #     run: mv build/ios/ipa/Runner.ipa build/ios/ipa/${{ env.name }}.ipa
 
-      - name: Upload iOS Build Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: ios-build
-          path: build/ios/ipa/${{ env.name }}.ipa
-          retention-days: 3
+    #   - name: Upload iOS Build Artifacts
+    #     if: matrix.platform == 'ios'
+    #     uses: actions/upload-artifact@v4
+    #     with:
+    #       name: ios-build
+    #       path: build/ios/ipa/${{ env.name }}.ipa
+    #       retention-days: 3
