--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -86,7 +86,7 @@ jobs:
           name: Release ${{ github.ref_name }}
           bodyFile: CHANGE.md
           allowUpdates: true
-          replacesArtifacts: false
+          replacesArtifacts: true
           token: ${{ secrets.GITHUB_TOKEN }}
           artifacts: "./artifacts/windows/${{ env.name }}.exe,./artifacts/macos/${{ env.name }}.dmg,./artifacts/android/${{ env.name }}.apk,./artifacts/linux/${{ env.name }}"
           skipIfReleaseExists: false
