--- a/.github/workflows/multi-platform-build.yml
+++ b/.github/workflows/multi-platform-build.yml
@@ -50,19 +50,20 @@ jobs:
       - name: Rename executable
         run: move build\windows\x64\runner\Release\txt_reader.exe build\windows\x64\runner\Release\${{ env.name }}.exe
 
-      - name: Generate Inno Setup Script
+
+      - name: Create Inno Setup Script
         run: |
-          Write-Host "[Setup]" > windows-installer.iss
-          Add-Content windows-installer.iss "AppName=${{ env.name }}"
-          Add-Content windows-installer.iss "AppVersion=1.0"
-          Add-Content windows-installer.iss "DefaultDirName={pf}\${{ env.name }}"
-          Add-Content windows-installer.iss "DefaultGroupName=${{ env.name }}"
-          Add-Content windows-installer.iss "OutputDir=build/windows/installer"
-          Add-Content windows-installer.iss "OutputBaseFilename=${{ env.name }}_installer"
-          Add-Content windows-installer.iss "[Files]"
-          Add-Content windows-installer.iss 'Source: "build\\windows\\x64\\runner\\Release\\*"; DestDir: "{app}"; Flags: ignoreversion'
-          Add-Content windows-installer.iss "[Icons]"
-          Add-Content windows-installer.iss 'Name: "{group}\\${{ env.name }}"; Filename: "{app}\\${{ env.name }}.exe"'
+          Set-Content -Path windows-installer.iss -Value "[Setup]"
+          Add-Content -Path windows-installer.iss -Value "AppName=${{ env.name }}"
+          Add-Content -Path windows-installer.iss -Value "AppVersion=1.0"
+          Add-Content -Path windows-installer.iss -Value "DefaultDirName={pf}\${{ env.name }}"
+          Add-Content -Path windows-installer.iss -Value "DefaultGroupName=${{ env.name }}"
+          Add-Content -Path windows-installer.iss -Value "OutputDir=build/windows/installer"
+          Add-Content -Path windows-installer.iss -Value "OutputBaseFilename=${{ env.name }}_installer"
+          Add-Content -Path windows-installer.iss -Value "[Files]"
+          Add-Content -Path windows-installer.iss -Value 'Source: "build\\windows\\x64\\runner\\Release\\*"; DestDir: "{app}"; Flags: ignoreversion'
+          Add-Content -Path windows-installer.iss -Value "[Icons]"
+          Add-Content -Path windows-installer.iss -Value 'Name: "{group}\${{ env.name }}"; Filename: "{app}\${{ env.name }}.exe"'
 
       - name: Run Inno Setup Compiler
         run: iscc windows-installer.iss
