--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,9 @@ dependencies:
   lottie: ^3.1.2
   flutter_spinkit: ^5.2.1
   flutter_svg: ^2.0.10+1
+  flutter_swiper_view: ^1.1.8
+  dotted_line: ^3.2.2
+  readmore: ^3.0.0
 
 dev_dependencies:
   flutter_test:
