--- a/.github/workflows/ci-check.yml
+++ b/.github/workflows/ci-check.yml
@@ -14,6 +14,9 @@ on:
       - dev
       - release
 
+env:
+  FLUTTER_VERSION: "3.24.5"
+
 jobs:
   lint-and-test:
     runs-on: ubuntu-latest
@@ -25,7 +28,8 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version-file: pubspec.yaml
+          flutter-version: ${{ env.FLUTTER_VERSION }}
+          channel: "stable"
 
       - name: Install dependencies
         run: flutter pub get
